# careplan_ai_demo

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile.backend  Dockerfile.frontend  README.md  SETUP_GUIDE.md  aws.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: dependencies.py  main.py
app/api/: __init__.py  auth.py  batch.py  draft.py  intake.py  mock_data.py  review.py  review_simple.py
app/auth/: __init__.py  middleware.py  service.py
app/ehr/: __init__.py  client.py
app/intake/: __init__.py  service.py
app/llm/: client.py  orchestrator.py
app/logging/: __init__.py  audit.py
app/models/: __init__.py  auth.py  careplan.py  ehr.py  guideline.py  intake.py
app/retrieval/: vector_store.py
app/review/: __init__.py  service.py
clients/web-ui/: docker-entrypoint.sh  nginx.conf  package-lock.json  package.json
clients/web-ui/public/: index.html
clients/web-ui/src/: App.test.tsx  App.tsx  index.css  setupTests.ts
clients/web-ui/src/components/: ProtectedRoute.tsx
clients/web-ui/src/contexts/: AuthContext.tsx
clients/web-ui/src/pages/: BatchOperations.tsx  CarePlans.tsx  Dashboard.tsx  Login.tsx  (+2 more)
data/: healthcare_dataset_1.csv
docker/: Dockerfile  docker-compose.yml
scripts/: run_seeding.py
scripts/seed_data/: __init__.py  database_seeder.py  ehr_records.csv  healthcare_data_generator.py  patient_intakes.csv  patients.csv
tests/: conftest.py  test_auth.py  test_main.py
tests/test_api/: test_intake.py
tests/test_llm/: test_client.py
tests/test_models/: test_careplan.py
(+10 files in other folders)
